@@ -382,7 +382,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-	<div id="thermostat3_popup" class="ui-popup ui-body-b ui-overlay-shadow ui-corner-all pop" style="width: 160px;">
+	<div id="thermostat3_popup" class="ui-popup ui-body-b ui-overlay-shadow ui-corner-all pop" style="width: 176px;">
 		<div class="ui-close" onclick="CloseTherm3Popup()"></div>
 		<table class="display" border="0" cellpadding="0" cellspacing="0">
 			<tr>
@@ -394,6 +394,13 @@ $(document).ready(function() {
 				<td align="left" style="vertical-align: center;">
 					<a id="popup_therm_up"><img src="images/Up48.png" class="lcursor" style="margin-top: 5px;" height="48" width="48" onclick="ThermUp()"></a>
 					<a id="popup_therm_down"><img src="images/Down48.png" class="lcursor" height="48" width="48" onclick="ThermDown()"></a>
+					<a id="popup_therm_stop"><img src="images/Stop48.png" class="lcursor" height="48" width="48" onclick="ThermStop()"></a>
+				</td>
+			<tr>		
+			</tr>
+				<td align="left" style="vertical-align: center;">
+					<a id="popup_therm_2up"><img src="images/Up48_2.png" class="lcursor" style="margin-top: 5px;" height="48" width="48" onclick="ThermUp2()"></a>
+					<a id="popup_therm_2down"><img src="images/Down48_2.png" class="lcursor" height="48" width="48" onclick="ThermDown2()"></a>
 				</td>
 			<tr>		
 		</table>
