@@ -23,6 +23,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Changed: Air Quality (CO-2) sensor class
 - Implemented: MySensors Water meter
 - Implemented: MySensors, Saving/Loading VAR values
+- Implemented: Mertik (Thermostat 3) added Second Up/Second Down option in the popup
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
